Renewed slide mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -912,18 +912,16 @@ Tex = icon_song_rap
 ########## LEGEND  #########
 
 [SongStaticNonParty1]
-X = 527
-Y = 405
-Z = 0.95
-W = 163
-H = 107
-Z = 0
+X = 550
+Y = 0
+W = 250
+H = 600
 Tex = BGFade
 Color = White
 Type = Transparent
 
 [SongTextNonParty1]
-X = 606
+X = 666
 Y = 410
 Z = 0.952
 Color = White
@@ -933,7 +931,7 @@ Align = 1
 Text = SING_SONG_SELECTION_LEGEND_TITLE
 
 [SongStaticNonParty2]
-X = 541
+X = 601
 Y = 430
 Z = 1
 W = 15
@@ -943,7 +941,7 @@ Color = White
 Type = Transparent
 
 [SongTextNonParty2]
-X = 570
+X = 630
 Y = 432
 Z = 0.952
 Color = White
@@ -953,7 +951,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_VIDEO
 
 [SongStaticNonParty3]
-X = 540
+X = 600
 Y = 450
 Z = 0.952
 W = 26
@@ -963,7 +961,7 @@ Color = White
 Type = Transparent
 
 [SongTextNonParty3]
-X = 570
+X = 630
 Y = 452
 Z = 0.952
 Color = White
@@ -973,7 +971,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 
 [SongStaticNonParty4]
-X = 540
+X = 600
 Y = 470
 Z = 0.952
 W = 26
@@ -983,7 +981,7 @@ Color = White
 Type = Transparent
 
 [SongTextNonParty4]
-X = 570
+X = 630
 Y = 472
 Z = 0.952
 Color = White
@@ -993,7 +991,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 
 [SongStaticNonParty5]
-X = 540
+X = 600
 Y = 490
 Z = 0.952
 W = 13
@@ -1003,7 +1001,7 @@ Color = White
 Type = Transparent
 
 [SongTextNonParty5]
-X = 570
+X = 630
 Y = 492
 Z = 0.952
 Color = White
@@ -2793,9 +2791,9 @@ Y = 146
 Tex = SongBG
 
 [SongSlideCover]
-X = 300
-Y = 120
-W = 200
+X = 324
+Y = 80
+W = 150
 H = 200
 Rows = 1
 Cols = 11
@@ -2804,212 +2802,249 @@ Reflections = 1
 
 [SongSlideMainCover]
 Inheritance = SongSlideCover
-Reflection = 0
+Reflection = 1
 Type = Transparent
 
 [SongSlideEqualizer]
 Inheritance = SongEqualizer
-Y = 500
+X = 40
+Y = 535
+Bands = 25
+Length = 20
+Reflection = 1
+ReflectionSpacing = 2
 
 [SongSlideMedleyIcon]
 Inheritance = SongMedleyIcon
+X = 435
+Y = 394
 
 [SongSlideCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
+X = 435
+Y = 394
 
 [SongSlideVideoIcon]
 Inheritance = SongVideoIcon
+X = 345
+Y = 393
 
 [SongSlideDuetIcon]
 Inheritance = SongDuetIcon
+X = 435
+Y = 394
 
 [SongSlideRapIcon]
 Inheritance = SongRapIcon
+X = 315
+Y = 394
 
 [SongSlideStatic1]
-X = 299
-Y = 320
-W = 202
-H = 190
+X = 204
+Y = 280
+W = 390
+H = 260
 Z = 0.95
+Alpha = 0.75
 Color = ColorLight
 Tex = SongSelection2
 Type = Colorized
 
-[SongSlideStatic2]
-W = 0
-
 [SongSlideTextArtist]
 X = 400
-Y = 328
-W = 190
+Y = 290
+W = 370
 Color = White
 Font = 1
-Size = 24
+Size = 20
 Align = 1
 
 [SongSlideTextTitle]
 X = 400
-Y = 394
-W = 190
+Y = 340
+W = 370
 Color = White
 Font = 0
-Size = 24
+Size = 18
 Align = 1
 
 [SongSlideTextNumber]
-X = 495
-Y = 480
+X = 590
+Y = 520
 Z = 0.95
 Color = White
-Size = 16
+Size = 15
 Align = 2
 
 [SongSlideTextYear]
 X = 400
-Y = 477
+Y = 395
 Z = 0.95
 Color = White
-Size = 20
+Size = 18
 Align = 1
 
 ########## LEGEND SLIDE #########
 
 [SongSlideStaticNonParty1]
-Inheritance = SongCarouselStaticNonParty1
+Inheritance = SongStaticNonParty1
 
 [SongSlideTextNonParty1]
-Inheritance = SongCarouselTextNonParty1
+Inheritance = SongTextNonParty1
 
 [SongSlideStaticNonParty2]
-Inheritance = SongCarouselStaticNonParty2
+Inheritance = SongStaticNonParty2
 
 [SongSlideTextNonParty2]
-Inheritance = SongCarouselTextNonParty2
+Inheritance = SongTextNonParty2
 
 [SongSlideStaticNonParty3]
-Inheritance = SongCarouselStaticNonParty3
+Inheritance = SongStaticNonParty3
 
 [SongSlideTextNonParty3]
-Inheritance = SongCarouselTextNonParty3
+Inheritance = SongTextNonParty3
 
 [SongSlideStaticNonParty4]
-Inheritance = SongCarouselStaticNonParty4
+Inheritance = SongStaticNonParty4
 
 [SongSlideTextNonParty4]
-Inheritance = SongCarouselTextNonParty4
+Inheritance = SongTextNonParty4
 
 [SongSlideStaticNonParty5]
-Inheritance = SongCarouselStaticNonParty5
+Inheritance = SongStaticNonParty5
 
 [SongSlideTextNonParty5]
-Inheritance = SongCarouselTextNonParty5
-
-[SongSlideTextMaxScore]
-Inheritance = SongTextMaxScore
-X = 30
-Y = 500
-
-[SongSlideTextMediaScore]
-Inheritance = SongTextMediaScore
-X = 30
-Y = 540
-
-[SongSlideTextMaxScore2]
-Inheritance = SongTextMaxScore2
-X = 170
-Y = 500
-
-[SongSlideTextMediaScore2]
-Inheritance = SongTextMediaScore2
-X = 170
-Y = 540
-
-[SongSlideTextScoreUser]
-Inheritance = SongTextScoreUser
-X = 170
-Y = 518
-
-[SongSlideTextMaxScoreLocal]
-Inheritance = SongTextMaxScoreLocal
-X = 180
-Y = 500
-
-[SongSlideTextMediaScoreLocal]
-Inheritance = SongTextMediaScoreLocal
-X = 180
-Y = 540
-
-[SongSlideTextScoreUserLocal]
-Inheritance = SongTextScoreUserLocal
-X = 180
-Y = 518
-
-[SongSlideStatic2PlayersDuetSingerP1]
-Inheritance = SongStatic2PlayersDuetSingerP1
-
-[SongSlideStatic2PlayersDuetSingerP2]
-Inheritance = SongStatic2PlayersDuetSingerP2
-
-[SongSlideStatic3PlayersDuetSingerP1]
-Inheritance = SongStatic3PlayersDuetSingerP1
-
-[SongSlideStatic3PlayersDuetSingerP2]
-Inheritance = SongStatic3PlayersDuetSingerP2
-
-[SongSlideStatic3PlayersDuetSingerP3]
-Inheritance = SongStatic3PlayersDuetSingerP3
-
-[SongSlideStatic4PlayersDuetSingerP3]
-Inheritance = SongStatic4PlayersDuetSingerP3
-
-[SongSlideStatic4PlayersDuetSingerP4]
-Inheritance = SongStatic4PlayersDuetSingerP4
-
-[SongSlideStatic6PlayersDuetSingerP4]
-Inheritance = SongStatic6PlayersDuetSingerP4
-
-[SongSlideStatic6PlayersDuetSingerP5]
-Inheritance = SongStatic6PlayersDuetSingerP5
-
-[SongSlideStatic6PlayersDuetSingerP6]
-Inheritance = SongStatic6PlayersDuetSingerP6
-
-[SongSlideText2PlayersDuetSingerP1]
-Inheritance = SongText2PlayersDuetSingerP1
-
-[SongSlideText2PlayersDuetSingerP2]
-Inheritance = SongText2PlayersDuetSingerP2
-
-[SongSlideText3PlayersDuetSingerP1]
-Inheritance = SongText3PlayersDuetSingerP1
-
-[SongSlideText3PlayersDuetSingerP2]
-Inheritance = SongText3PlayersDuetSingerP2
-
-[SongSlideText3PlayersDuetSingerP3]
-Inheritance = SongText3PlayersDuetSingerP3
+Inheritance = SongTextNonParty5
 
 [SongSlideTextNonParty6]
 Inheritance = SongRouletteTextNonParty6
+X = 18
+Y = 18
 
-[SongSlideStaticNonParty6]
-Inheritance = SongRouletteStaticNonParty6
+[SongSlideTextMaxScore]
+Inheritance = SongTextMaxScore
+X = 220
+Y = 460
 
-[SongSlideTextNonParty7]
-Inheritance = SongRouletteTextNonParty7
+[SongSlideTextMediaScore]
+Inheritance = SongTextMediaScore
+X = 220
+Y = 500
 
-[SongSlideStaticNonParty7]
-Inheritance = SongRouletteStaticNonParty7
+[SongSlideTextMaxScore2]
+Inheritance = SongTextMaxScore2
+X = 390
+Y = 460
 
-[SongSlideTextNonParty8]
-Inheritance = SongRouletteTextNonParty8
+[SongSlideTextMediaScore2]
+Inheritance = SongTextMediaScore2
+X = 390
+Y = 500
 
-[SongSlideStaticNonParty8]
-Inheritance = SongRouletteStaticNonParty8
+[SongSlideTextScoreUser]
+Inheritance = SongTextScoreUser
+X = 390
+Y = 478
 
-[SongSlideTextNonParty9]
-Inheritance = SongRouletteTextNonParty9
+[SongSlideTextMaxScoreLocal]
+Inheritance = SongTextMaxScoreLocal
+X = 400
+Y = 460
+
+[SongSlideTextMediaScoreLocal]
+Inheritance = SongTextMediaScoreLocal
+X = 400
+Y = 500
+
+[SongSlideTextScoreUserLocal]
+Inheritance = SongTextScoreUserLocal
+X = 400
+Y = 478
+
+[SongSlideStatic2PlayersDuetSingerP1]
+Inheritance = SongStatic2PlayersDuetSingerP1
+X = 305
+Y = 455
+W = 194
+
+[SongSlideStatic2PlayersDuetSingerP2]
+Inheritance = SongStatic2PlayersDuetSingerP2
+X = 305
+Y = 485
+W = 194
+
+[SongSlideStatic3PlayersDuetSingerP1]
+Inheritance = SongStatic3PlayersDuetSingerP1
+X = 305
+Y = 450
+W = 194
+
+[SongSlideStatic3PlayersDuetSingerP2]
+Inheritance = SongStatic3PlayersDuetSingerP2
+X = 305
+Y = 480
+W = 194
+
+[SongSlideStatic3PlayersDuetSingerP3]
+Inheritance = SongStatic3PlayersDuetSingerP3
+X = 305
+Y = 510
+W = 194
+
+[SongSlideStatic4PlayersDuetSingerP3]
+Inheritance = SongStatic4PlayersDuetSingerP3
+X = 317
+Y = 455
+W = 194
+
+[SongSlideStatic4PlayersDuetSingerP4]
+Inheritance = SongStatic4PlayersDuetSingerP4
+X = 317
+Y = 485
+W = 194
+
+[SongSlideStatic6PlayersDuetSingerP4]
+Inheritance = SongStatic6PlayersDuetSingerP4
+X = 317
+Y = 450
+W = 200
+
+[SongSlideStatic6PlayersDuetSingerP5]
+Inheritance = SongStatic6PlayersDuetSingerP5
+X = 317
+Y = 480
+W = 200
+
+[SongSlideStatic6PlayersDuetSingerP6]
+Inheritance = SongStatic6PlayersDuetSingerP6
+X = 317
+Y = 510
+W = 200
+
+[SongSlideText2PlayersDuetSingerP1]
+Inheritance = SongText2PlayersDuetSingerP1
+X = 400
+Y = 460
+
+[SongSlideText2PlayersDuetSingerP2]
+Inheritance = SongText2PlayersDuetSingerP2
+X = 400
+Y = 490
+
+[SongSlideText3PlayersDuetSingerP1]
+Inheritance = SongText3PlayersDuetSingerP1
+X = 400
+Y = 455
+
+[SongSlideText3PlayersDuetSingerP2]
+Inheritance = SongText3PlayersDuetSingerP2
+X = 400
+Y = 485
+
+[SongSlideText3PlayersDuetSingerP3]
+Inheritance = SongText3PlayersDuetSingerP3
+X = 400
+Y = 515
 
 #and these are the ones for partymode
 [SongSlideStaticParty1]
