--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -2326,16 +2326,19 @@ Inheritance = SongRouletteStaticMedley3
 Tex = SongBG
 
 [SongSlotMachineCover]
-X = 60
-Y = 190
-W = 325
-H = 200
-Rows = 3
+X = 40
+Y = 210
+W = 300
+H = 170
+Rows = 1
 Cols = 1
 
 [SongSlotMachineMainCover]
 Inheritance = SongSlotMachineCover
-W = 200
+X = 10
+W = 240
+H = 200
+Y = 190
 Type = Transparent
 
 [SongSlotMachineEqualizer]
@@ -2346,88 +2349,89 @@ W = 3
 H = 3
 Space = 1
 Bands = 30
+Visible = 0
 
 [SongSlotMachineMedleyIcon]
 Inheritance = SongMedleyIcon
-X = 315
+X = 295
 Y = 352
-W = 36
-H = 26
+W = 31
+H = 21
 
 [SongSlotMachineCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
-X = 315
+X = 295
 Y = 352
-W = 36
-H = 26
+W = 31
+H = 21
 
 [SongSlotMachineVideoIcon]
 Inheritance = SongVideoIcon
-X = 280
+X = 265
 Y = 350
-W = 26
-H = 30
+W = 21
+H = 25
 
 [SongSlotMachineDuetIcon]
 Inheritance = SongDuetIcon
-X = 315
+X = 295
 Y = 350
-W = 25
-H = 30
+W = 20
+H = 25
 
 [SongSlotMachineRapIcon]
 Inheritance = SongRapIcon
-X = 357
+X = 332
 Y = 350
-W = 25
-H = 30
+W = 20
+H = 25
 
 [SongSlotMachineStatic1]
-X = 260
+X = 250
 Y = 190
 W = 460
 H = 200
 Z = 0.95
 Alpha = 0.45
 Color = ColorLight
-Tex = SongSelection3
+Tex = SongSelection2
 Type = Colorized
 
 [SongSlotMachineTextArtist]
-X = 280
-Y = 210
-W = 420
+X = 265
+Y = 200
+W = 200
 Color = White
 Font = 1
-Size = 40
+Size = 20
 Align = 0
 
 [SongSlotMachineTextTitle]
-X = 280
-Y = 280
-W = 420
+X = 265
+Y = 260
+W = 200
 Color = White
-Size = 36
+Size = 18
 Align = 0
 
 [SongSlotMachineTextNumber]
 Inheritance = SongSlideTextNumber
 X = 705
-Y = 200
-Size = 22
+Y = 370
+Size = 14
 
 [SongSlotMachineTextYear]
 Inheritance = SongSlideTextYear
-X = 460
-Y = 350
-Size = 28
+X = 280
+Y = 320
+Size = 18
 
 ########## LEGEND SLOT MACHINE #########
 
 [SongSlotMachineStaticNonParty1]
 Inheritance = SongStaticNonParty1
 X = 555
-Y = 415
+Y = 0
 
 [SongSlotMachineTextNonParty1]
 Inheritance = SongTextNonParty1
@@ -2476,43 +2480,43 @@ Y = 502
 
 [SongSlotMachineTextMaxScore]
 Inheritance = SongTextMaxScore
-X = 290
-Y = 450
+X = 490
+Y = 230
 
 [SongSlotMachineTextMediaScore]
 Inheritance = SongTextMediaScore
-X = 290
-Y = 490
+X = 490
+Y = 270
 
 [SongSlotMachineTextMaxScore2]
 Inheritance = SongTextMaxScore2
-X = 430
-Y = 450
+X = 630
+Y = 230
 
 [SongSlotMachineTextMediaScore2]
 Inheritance = SongTextMediaScore2
-X = 430
-Y = 490
+X = 630
+Y = 270
 
 [SongSlotMachineTextScoreUser]
 Inheritance = SongTextScoreUser
-X = 430
-Y = 468
+X = 630
+Y = 248
 
 [SongSlotMachineTextMaxScoreLocal]
 Inheritance = SongTextMaxScoreLocal
-X = 440
-Y = 450
+X = 640
+Y = 230
 
 [SongSlotMachineTextMediaScoreLocal]
 Inheritance = SongTextMediaScoreLocal
-X = 440
-Y = 490
+X = 640
+Y = 270
 
 [SongSlotMachineTextScoreUserLocal]
 Inheritance = SongTextScoreUserLocal
-X = 440
-Y = 468
+X = 640
+Y = 248
 
 [SongSlotMachineStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
@@ -2591,48 +2595,7 @@ Y = 490
 
 [SongSlotMachineTextNonParty6]
 Inheritance = SongRouletteTextNonParty6
-
-[SongSlotMachineStaticNonParty6]
-Inheritance = SongRouletteStaticNonParty6
-X = 340
-Y = 545
-Reflection = 1
-ReflectionSpacing = 2
-
-[SongSlotMachineTextNonParty7]
-Inheritance = SongRouletteTextNonParty7
-X = 370
-Y = 548
-Reflection = 1
-ReflectionSpacing = 13
-
-[SongSlotMachineStaticNonParty7]
-Inheritance = SongRouletteStaticNonParty7
-X = 440
-Y = 545
-Reflection = 1
-ReflectionSpacing = 2
-
-[SongSlotMachineTextNonParty8]
-Inheritance = SongRouletteTextNonParty8
-X = 470
-Y = 548
-Reflection = 1
-ReflectionSpacing = 13
-
-[SongSlotMachineStaticNonParty8]
-Inheritance = SongRouletteStaticNonParty8
-X = 630
-Y = 545
-Reflection = 1
-ReflectionSpacing = 2
-
-[SongSlotMachineTextNonParty9]
-Inheritance = SongRouletteTextNonParty9
-X = 660
-Y = 548
-Reflection = 1
-ReflectionSpacing = 13
+X = 20
 
 #and these are the ones for partymode
 # NAVBAR for party
