renewed carousel mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -2001,53 +2001,65 @@ Cols = 3
 
 [SongCarouselMainCover]
 Inheritance = SongSlideMainCover
+W = 237
+X = 280
 
 [SongCarouselEqualizer]
 Inheritance = SongEqualizer
 Y = 500
+Visible = 0
 
 [SongCarouselMedleyIcon]
 Inheritance = SongMedleyIcon
+X = 338
+Y = 394
 
 [SongCarouselCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
+X = 338
+Y = 394
 
 [SongCarouselVideoIcon]
 Inheritance = SongVideoIcon
+X = 413
+Y = 392
 
 [SongCarouselDuetIcon]
 Inheritance = SongDuetIcon
+X = 350
+Y = 392
+H = 23
+W = 17
 
 [SongCarouselRapIcon]
 Inheritance = SongRapIcon
+X = 436
+Y = 392
 
 [SongCarouselStatic1]
 Inheritance = SongSlideStatic1
 
-[SongCarouselStatic2]
-Inheritance = SongRouletteStatic2
-X = 250
-Y = 120
-W = 302
-
 [SongCarouselTextArtist]
 Inheritance = SongSlideTextArtist
+X = 390
 
 [SongCarouselTextTitle]
 Inheritance = SongSlideTextTitle
+X = 390
 
 [SongCarouselTextNumber]
 Inheritance = SongSlideTextNumber
 
 [SongCarouselTextYear]
 Inheritance = SongSlideTextYear
+X = 390
 
 ########## LEGEND CAROUSEL #########
 
 [SongCarouselStaticNonParty1]
 Inheritance = SongStaticNonParty1
-X = 582
-Y = 405
+X = 555
+Y = 0
 
 [SongCarouselTextNonParty1]
 Inheritance = SongTextNonParty1
@@ -2094,95 +2106,125 @@ Inheritance = SongTextNonParty5
 X = 625
 Y = 492
 
+[SongCarouselTextNonParty6]
+Inheritance = SongRouletteTextNonParty6
+X = 20
+Y = 20
+
 [SongCarouselTextMaxScore]
 Inheritance = SongTextMaxScore
+X = 420
+Y = 440
 
 [SongCarouselTextMediaScore]
 Inheritance = SongTextMediaScore
+X = 420
+Y = 480
 
 [SongCarouselTextMaxScore2]
 Inheritance = SongTextMaxScore2
+X = 560
+Y = 440
 
 [SongCarouselTextMediaScore2]
 Inheritance = SongTextMediaScore2
+X = 560
+Y = 480
 
 [SongCarouselTextScoreUser]
 Inheritance = SongTextScoreUser
+X = 560
+Y = 458
 
 [SongCarouselTextMaxScoreLocal]
 Inheritance = SongTextMaxScoreLocal
+X = 560
+Y = 440
 
 [SongCarouselTextMediaScoreLocal]
 Inheritance = SongTextMediaScoreLocal
+X = 560
+Y = 480
 
 [SongCarouselTextScoreUserLocal]
 Inheritance = SongTextScoreUserLocal
+X = 550
+Y = 458
 
 [SongCarouselStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
+X = 415
+Y = 435
 
 [SongCarouselStatic2PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP2
+X = 415
+Y = 465
 
 [SongCarouselStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic3PlayersDuetSingerP1
+X = 415
+Y = 425
 
 [SongCarouselStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic3PlayersDuetSingerP2
+X = 415
+Y = 455
 
 [SongCarouselStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic3PlayersDuetSingerP3
+X = 415
+Y = 485
 
 [SongCarouselStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic4PlayersDuetSingerP3
+X = 425
+Y = 435
 
 [SongCarouselStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic4PlayersDuetSingerP4
+X = 425
+Y = 465
 
 [SongCarouselStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic6PlayersDuetSingerP4
+X = 425
+Y = 425
 
 [SongCarouselStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic6PlayersDuetSingerP5
+X = 425
+Y = 455
 
 [SongCarouselStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic6PlayersDuetSingerP6
+X = 425
+Y = 485
 
 [SongCarouselText2PlayersDuetSingerP1]
 Inheritance = SongText2PlayersDuetSingerP1
+X = 492
+Y = 440
 
 [SongCarouselText2PlayersDuetSingerP2]
 Inheritance = SongText2PlayersDuetSingerP2
+X = 492
+Y = 470
 
 [SongCarouselText3PlayersDuetSingerP1]
 Inheritance = SongText3PlayersDuetSingerP1
+X = 492
+Y = 430
 
 [SongCarouselText3PlayersDuetSingerP2]
 Inheritance = SongText3PlayersDuetSingerP2
+X = 492
+Y = 460
 
 [SongCarouselText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
-
-[SongCarouselTextNonParty6]
-Inheritance = SongRouletteTextNonParty6
-
-[SongCarouselStaticNonParty6]
-Inheritance = SongRouletteStaticNonParty6
-
-[SongCarouselTextNonParty7]
-Inheritance = SongRouletteTextNonParty7
-
-[SongCarouselStaticNonParty7]
-Inheritance = SongRouletteStaticNonParty7
-
-[SongCarouselTextNonParty8]
-Inheritance = SongRouletteTextNonParty8
-
-[SongCarouselStaticNonParty8]
-Inheritance = SongRouletteStaticNonParty8
-
-[SongCarouselTextNonParty9]
-Inheritance = SongRouletteTextNonParty9
+X = 492
+Y = 490
 
 #and these are the ones for partymode
 # NAVBAR for party
@@ -2313,6 +2355,8 @@ Inheritance = SongRouletteStaticMedley2
 
 [SongCarouselStaticMedley3]
 Inheritance = SongRouletteStaticMedley3
+
+
 
 ########################################################################################
 ##### 																			   #####
