Renewed roulette mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1074,46 +1074,51 @@ Color = ColorLight
 [SongRouletteBackground]
 Tex = SongBG
 
-[SongRouletteTextCat]
-X = 72
-Y = 58
-Color = White
-Font = 0
-Size = 30
-Align = 0
-
 [SongRouletteCover]
 Inheritance = SongSlideCover
-Y = 150
+Y = 130
 H = 150
 Cols = 5
+Padding = 60
 
 [SongRouletteMainCover]
 Inheritance = SongSlideMainCover
-Y = 108
+X = 280
+W = 237
 
 [SongRouletteEqualizer]
 Inheritance = SongEqualizer
+Visible = 0
 
 [SongRouletteMedleyIcon]
 Inheritance = SongMedleyIcon
+X = 338
+Y = 394
 
 [SongRouletteCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
+X = 338
+Y = 394
 
 [SongRouletteVideoIcon]
 Inheritance = SongVideoIcon
+X = 413
+Y = 392
 
 [SongRouletteDuetIcon]
 Inheritance = SongDuetIcon
+X = 350
+Y = 392
+H = 23
+W = 17
 
 [SongRouletteRapIcon]
 Inheritance = SongRapIcon
+X = 436
+Y = 392
 
 [SongRouletteStatic1]
 Inheritance = SongSlideStatic1
-Y = 300
-H = 210
 
 [SongRouletteStatic2]
 X = 278
@@ -1128,17 +1133,18 @@ Type = Colorized
 
 [SongRouletteTextArtist]
 Inheritance = SongSlideTextArtist
-Y = 318
+X = 390
 
 [SongRouletteTextTitle]
 Inheritance = SongSlideTextTitle
-Y = 384
+X = 390
 
 [SongRouletteTextNumber]
 Inheritance = SongSlideTextNumber
 
 [SongRouletteTextYear]
 Inheritance = SongSlideTextYear
+X = 390
 
 ########## LEGEND ROULETTE #########
 
@@ -1172,74 +1178,129 @@ Inheritance = SongStaticNonParty5
 [SongRouletteTextNonParty5]
 Inheritance = SongTextNonParty5
 
+[SongRouletteTextNonParty6]
+X = 20
+Y = 20
+Color = White
+Font = 0
+Size = 40
+Text = SING_SONG_SELECTION
+Align = 0
+
 [SongRouletteTextMaxScore]
 Inheritance = SongTextMaxScore
+X = 420
+Y = 440
 
 [SongRouletteTextMediaScore]
 Inheritance = SongTextMediaScore
+X = 420
+Y = 480
 
 [SongRouletteTextMaxScore2]
 Inheritance = SongTextMaxScore2
+X = 560
+Y = 440
 
 [SongRouletteTextMediaScore2]
 Inheritance = SongTextMediaScore2
+X = 560
+Y = 480
 
 [SongRouletteTextScoreUser]
 Inheritance = SongTextScoreUser
+X = 560
+Y = 458
 
 [SongRouletteTextMaxScoreLocal]
 Inheritance = SongTextMaxScoreLocal
+X = 560
+Y = 440
 
 [SongRouletteTextMediaScoreLocal]
 Inheritance = SongTextMediaScoreLocal
+X = 560
+Y = 480
 
 [SongRouletteTextScoreUserLocal]
 Inheritance = SongTextScoreUserLocal
+X = 550
+Y = 458
 
 [SongRouletteStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
+X = 415
+Y = 435
 
 [SongRouletteStatic2PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP2
+X = 415
+Y = 465
 
 [SongRouletteStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic3PlayersDuetSingerP1
+X = 415
+Y = 425
 
 [SongRouletteStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic3PlayersDuetSingerP2
+X = 415
+Y = 455
 
 [SongRouletteStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic3PlayersDuetSingerP3
+X = 415
+Y = 485
 
 [SongRouletteStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic4PlayersDuetSingerP3
+X = 425
+Y = 435
 
 [SongRouletteStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic4PlayersDuetSingerP4
+X = 425
+Y = 465
 
 [SongRouletteStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic6PlayersDuetSingerP4
+X = 425
+Y = 425
 
 [SongRouletteStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic6PlayersDuetSingerP5
+X = 425
+Y = 455
 
 [SongRouletteStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic6PlayersDuetSingerP6
+X = 425
+Y = 485
 
 [SongRouletteText2PlayersDuetSingerP1]
 Inheritance = SongText2PlayersDuetSingerP1
+X = 492
+Y = 440
 
 [SongRouletteText2PlayersDuetSingerP2]
 Inheritance = SongText2PlayersDuetSingerP2
+X = 492
+Y = 470
 
 [SongRouletteText3PlayersDuetSingerP1]
 Inheritance = SongText3PlayersDuetSingerP1
+X = 492
+Y = 430
 
 [SongRouletteText3PlayersDuetSingerP2]
 Inheritance = SongText3PlayersDuetSingerP2
+X = 492
+Y = 460
 
 [SongRouletteText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
+X = 492
+Y = 490
 
 #Variable statics and texts for song-screen in sing- and partymode
 # There can be an unlimited Number of Statics and Texts, As long
@@ -1254,89 +1315,7 @@ Inheritance = SongText3PlayersDuetSingerP3
 #        SongTextNonParty[No]
 #Here are the ones for singmode
 
-[SongRouletteTextNonParty6]
-X = 30
-Y = 6
-Color = White
-Font = 0
-Size = 40
-Text = SING_SONG_SELECTION
-Align = 0
 
-# Menu opens with [M]
-[SongRouletteStaticNonParty6]
-X = 255
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonM
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
-
-[SongRouletteTextNonParty7]
-X = 287
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_MENU
-Reflection = 0
-ReflectionSpacing = 13
-
-# The so famous search, shown with [J]
-[SongRouletteStaticNonParty7]
-X = 375
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonJ
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
-
-[SongRouletteTextNonParty8]
-X = 407
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_JUMPTO_DESC
-Reflection = 0
-ReflectionSpacing = 13
-
-# [P]laylist
-[SongRouletteStaticNonParty8]
-X = 580
-Y = 560
-W = 25
-H = 30
-Z = 0.952
-Tex = ButtonP
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
-
-[SongRouletteTextNonParty9]
-X = 612
-Y = 563
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_SONG_SELECTION_PLAYLIST
-Reflection = 0
-ReflectionSpacing = 13
 
 #and these are the ones for partymode
 
@@ -1662,7 +1641,7 @@ Align = 1
 [SongChessboardStaticNonParty1]
 Inheritance = SongStaticNonParty1
 X = 607
-Y = 435
+Y = 0
 
 #text title legend
 [SongChessboardTextNonParty1]
