New search bar (part1)

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -696,28 +696,30 @@ ColB=0
 Alpha=0.5
 
 [SongJumptoStatic1]
-X = 458
-Y = 20
-W = 24
-H = 24
-Color = White
+X = 270
+Y = 555
+W = 320
+H = 30
+Color = ColorDark
+DColor = White
 Tex = icon_song_search
 Type = Colorized
 Z = 0.97
 
 [SongJumptoText1]
-X = 488
-Y = 15
+X = 435
+Y = 562
 Z = 0.97
-Color = ColorLight
-Size = 30
+Color = White
+Size = 16
+Align = 1
 Text = SONG_JUMPTO_TYPE_DESC
 
 [SongJumptoSelectSlideType]
 X = 455
 Y = -40
 Z = 0.97
-H = 30
+H = 20
 SBGW = 240
 SkipX = 0
 Size = 1
@@ -732,15 +734,15 @@ STColor = White
 STDColor = White
 
 [SongJumptoButtonSearchText]
-X = 475
-Y = 32
+X = 280
+Y = 535
 Z = 0.97
 W = 290
-H = 50
-Size = 30
+H = 10
+Size = 8
 Font = 1
 Align = 0
-Color = ColorLight
+Color = White
 Type = Transparent
 
 #[SongJumptoTextFound]
