New creator & fixer tags

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -911,6 +911,22 @@ W = 18
 H = 24
 Tex = icon_song_rap
 
+[SongCreatorIcon]
+Inheritance = SongIcon
+X = 210
+Y = 505
+W = 12
+H = 16
+Tex = icon_song_createdby
+
+[SongFixerIcon]
+Inheritance = SongIcon
+X = 400
+Y = 506
+W = 11
+H = 14
+Tex = icon_song_fixedby
+
 ########## LEGEND  #########
 
 [SongStaticNonParty1]
@@ -1078,6 +1094,7 @@ Tex = SongBG
 
 [SongRouletteCover]
 Inheritance = SongSlideCover
+X = 300
 Y = 130
 H = 150
 Cols = 5
@@ -1119,6 +1136,12 @@ Inheritance = SongRapIcon
 X = 436
 Y = 392
 
+[SongRouletteCreatorIcon]
+Inheritance = SongCreatorIcon
+
+[SongRouletteFixerIcon]
+Inheritance = SongFixerIcon
+
 [SongRouletteStatic1]
 Inheritance = SongSlideStatic1
 
@@ -1137,12 +1160,31 @@ Type = Colorized
 Inheritance = SongSlideTextArtist
 X = 390
 
+[SongRouletteTextCreator]
+X = 230
+Y = 508
+Color = White
+Font = 0
+Size = 12
+Align = 0
+
+[SongRouletteTextFixer]
+X = 420
+Y = 508
+Color = White
+Font = 0
+Size = 12
+Align = 0
+
 [SongRouletteTextTitle]
 Inheritance = SongSlideTextTitle
 X = 390
 
 [SongRouletteTextNumber]
 Inheritance = SongSlideTextNumber
+X = 580
+Y = 530
+Size = 12
 
 [SongRouletteTextYear]
 Inheritance = SongSlideTextYear
@@ -1598,6 +1640,16 @@ Inheritance = SongRapIcon
 X = 123
 Y = 430
 
+[SongChessboardCreatorIcon]
+Inheritance = SongCreatorIcon
+X = 10
+Y = 423
+
+[SongChessboardFixerIcon]
+Inheritance = SongFixerIcon
+X = 10
+Y = 450
+
 [SongChessboardTextArtist]
 X = 102
 Y = 240
@@ -1623,7 +1675,7 @@ X = 195
 Y = 395
 Z = 0.95
 Color = White
-Size = 15
+Size = 14
 Align = 2
 Reflection = 0
 ReflectionSpacing = 21
@@ -1635,6 +1687,16 @@ Z = 0.95
 Color = White
 Size = 16
 Align = 1
+
+[SongChessboardTextCreator]
+Inheritance = SongRouletteTextCreator
+X = 30
+Y = 425
+
+[SongChessboardTextFixer]
+Inheritance = SongRouletteTextFixer
+X = 30
+Y = 450
 
 #################
 #### Legend  ####
@@ -2017,6 +2079,12 @@ Inheritance = SongRapIcon
 X = 436
 Y = 392
 
+[SongCarouselCreatorIcon]
+Inheritance = SongCreatorIcon
+
+[SongCarouselFixerIcon]
+Inheritance = SongFixerIcon
+
 [SongCarouselStatic1]
 Inheritance = SongSlideStatic1
 
@@ -2034,6 +2102,12 @@ Inheritance = SongSlideTextNumber
 [SongCarouselTextYear]
 Inheritance = SongSlideTextYear
 X = 390
+
+[SongCarouselTextCreator]
+Inheritance = SongRouletteTextCreator
+
+[SongCarouselTextFixer]
+Inheritance = SongRouletteTextFixer
 
 ########## LEGEND CAROUSEL #########
 
@@ -2361,9 +2435,9 @@ Cols = 1
 [SongSlotMachineMainCover]
 Inheritance = SongSlotMachineCover
 X = 10
+Y = 190
 W = 240
 H = 200
-Y = 190
 Type = Transparent
 
 [SongSlotMachineEqualizer]
@@ -2411,6 +2485,16 @@ Y = 350
 W = 20
 H = 25
 
+[SongSlotMachineCreatorIcon]
+Inheritance = SongCreatorIcon
+X = 500
+Y = 200
+
+[SongSlotMachineFixerIcon]
+Inheritance = SongFixerIcon
+X = 500
+Y = 225
+
 [SongSlotMachineStatic1]
 X = 250
 Y = 190
@@ -2450,6 +2534,16 @@ Inheritance = SongSlideTextYear
 X = 280
 Y = 320
 Size = 18
+
+[SongSlotMachineTextCreator]
+Inheritance = SongRouletteTextCreator
+X = 520
+Y = 202
+
+[SongSlotMachineTextFixer]
+Inheritance = SongRouletteTextFixer
+X = 520
+Y = 227
 
 ########## LEGEND SLOT MACHINE #########
 
@@ -2827,11 +2921,17 @@ Inheritance = SongRapIcon
 X = 315
 Y = 394
 
+[SongSlideCreatorIcon]
+Inheritance = SongCreatorIcon
+
+[SongSlideFixerIcon]
+Inheritance = SongFixerIcon
+
 [SongSlideStatic1]
-X = 204
+X = 195
 Y = 280
-W = 390
-H = 260
+W = 395
+H = 270
 Z = 0.95
 Alpha = 0.75
 Color = ColorLight
@@ -2857,11 +2957,11 @@ Size = 18
 Align = 1
 
 [SongSlideTextNumber]
-X = 590
-Y = 520
+X = 580
+Y = 530
 Z = 0.95
 Color = White
-Size = 15
+Size = 12
 Align = 2
 
 [SongSlideTextYear]
@@ -2871,6 +2971,12 @@ Z = 0.95
 Color = White
 Size = 18
 Align = 1
+
+[SongSlideTextCreator]
+Inheritance = SongRouletteTextCreator
+
+[SongSlideTextFixer]
+Inheritance = SongRouletteTextFixer
 
 ########## LEGEND SLIDE #########
 
@@ -3215,7 +3321,6 @@ Inheritance = SongRouletteStaticMedley3
 [SongListBackground]
 Tex = SongBG
 
-
 [SongListSelectSong]
 X = 30
 Y = 65
@@ -3295,6 +3400,16 @@ W = 18
 H = 22
 Z = 1
 
+[SongListCreatorIcon]
+Inheritance = SongCreatorIcon
+X = 580
+Y = 530
+
+[SongListFixerIcon]
+Inheritance = SongFixerIcon
+X = 580
+Y = 555
+
 [SongListTextArtist]
 X = 100
 Y = 73
@@ -3324,6 +3439,16 @@ X = 527
 Y = 72
 Size = 18
 Align = 2
+
+[SongListTextCreator]
+Inheritance = SongRouletteTextCreator
+X = 600
+Y = 532
+
+[SongListTextFixer]
+Inheritance = SongRouletteTextFixer
+X = 600
+Y = 556
 
 ########## LEGEND LIST #########
 
@@ -3769,6 +3894,14 @@ Y = 465
 W = 20
 H = 24
 
+[SongMosaicCreatorIcon]
+Inheritance = SongCreatorIcon
+X = 230
+
+[SongMosaicFixerIcon]
+Inheritance = SongFixerIcon
+X = 415
+
 [SongMosaicStatic1]
 X = 220
 Y = 328
@@ -3811,6 +3944,14 @@ Y = 343
 Z = 1
 Size = 16
 Align = 2
+
+[SongMosaicTextCreator]
+Inheritance = SongRouletteTextCreator
+X = 250
+
+[SongMosaicTextFixer]
+Inheritance = SongRouletteTextFixer
+X = 435
 
 ########## LEGEND MOSAIC #########
 
