--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -30,13 +30,15 @@ Cursor_Pressed = [interface]cursor_pressed.png
 /**
  * Icons
  */
-icon_song_menu   = [icon]song_menu.png
-icon_song_search = [icon]song_search.png
-icon_song_video  = [icon]song_video.png
-icon_song_medley = [icon]song_medley.png
+icon_song_menu       = [icon]song_menu.png
+icon_song_search     = [icon]song_search.png
+icon_song_video      = [icon]song_video.png
+icon_song_medley     = [icon]song_medley.png
 icon_song_calcmedley = [icon]song_calcmedley.png
-icon_song_duet 	 = [icon]song_duet.png
-icon_song_rap 	 = [icon]song_rap.png
+icon_song_duet       = [icon]song_duet.png
+icon_song_rap        = [icon]song_rap.png
+icon_song_createdby  = [icon]icon_song_createdby.png
+icon_song_fixedby    = [icon]icon_song_fixedby.png
 
 loadicon = [load]logo.png
 loadbaricon = [load]bar.png
