Moved inheritance objects

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 20.4
+Text = UltraStar WorldParty 20.7
 
 [MainText2]
 X = 5
@@ -1093,16 +1093,19 @@ Color = ColorLight
 Tex = SongBG
 
 [SongRouletteCover]
-Inheritance = SongSlideCover
-X = 300
+X = 315
 Y = 130
 H = 150
+W = 150
+Rows = 1
 Cols = 5
 Padding = 60
+Reflections = 1
 
 [SongRouletteMainCover]
-Inheritance = SongSlideMainCover
-X = 280
+X = 270
+Y = 80
+H = 200
 W = 237
 
 [SongRouletteEqualizer]
@@ -1142,11 +1145,21 @@ Inheritance = SongCreatorIcon
 [SongRouletteFixerIcon]
 Inheritance = SongFixerIcon
 
+#song info background
 [SongRouletteStatic1]
-Inheritance = SongSlideStatic1
+X = 195
+Y = 280
+W = 395
+H = 270
+Z = 0.95
+Alpha = 0.75
+Color = ColorLight
+Tex = SongSelection2
+Type = Colorized
 
+#Arrows
 [SongRouletteStatic2]
-X = 278
+X = 267
 Y = 100
 W = 244
 H = 200
@@ -1157,8 +1170,13 @@ Tex = SongSelection1
 Type = Colorized
 
 [SongRouletteTextArtist]
-Inheritance = SongSlideTextArtist
 X = 390
+Y = 290
+W = 370
+Color = White
+Font = 1
+Size = 20
+Align = 1
 
 [SongRouletteTextCreator]
 X = 230
@@ -1177,18 +1195,29 @@ Size = 12
 Align = 0
 
 [SongRouletteTextTitle]
-Inheritance = SongSlideTextTitle
 X = 390
+Y = 340
+W = 370
+Color = White
+Font = 0
+Size = 18
+Align = 1
 
 [SongRouletteTextNumber]
-Inheritance = SongSlideTextNumber
 X = 580
 Y = 530
+Z = 0.95
+Color = White
 Size = 12
+Align = 2
 
 [SongRouletteTextYear]
-Inheritance = SongSlideTextYear
 X = 390
+Y = 395
+Z = 0.95
+Color = White
+Size = 18
+Align = 1
 
 ########## LEGEND ROULETTE #########
 
@@ -1638,7 +1667,7 @@ H = 22
 [SongChessboardRapIcon]
 Inheritance = SongRapIcon
 X = 123
-Y = 430
+Y = 390
 
 [SongChessboardCreatorIcon]
 Inheritance = SongCreatorIcon
@@ -2039,12 +2068,10 @@ Y = 520
 Tex = SongBG
 
 [SongCarouselCover]
-Inheritance = SongSlideCover
-Cols = 3
+Inheritance = SongRouletteCover
 
 [SongCarouselMainCover]
-Inheritance = SongSlideMainCover
-W = 237
+Inheritance = SongRouletteMainCover
 X = 280
 
 [SongCarouselEqualizer]
@@ -2433,7 +2460,6 @@ Rows = 1
 Cols = 1
 
 [SongSlotMachineMainCover]
-Inheritance = SongSlotMachineCover
 X = 10
 Y = 190
 W = 240
@@ -2873,19 +2899,15 @@ Y = 146
 Tex = SongBG
 
 [SongSlideCover]
+Inheritance = SongRouletteCover
 X = 324
 Y = 80
 W = 150
 H = 200
-Rows = 1
 Cols = 11
-Padding = 60
-Reflections = 1
 
 [SongSlideMainCover]
-Inheritance = SongSlideCover
-Reflection = 1
-Type = Transparent
+Inheritance = SongRouletteMainCover
 
 [SongSlideEqualizer]
 Inheritance = SongEqualizer
@@ -2928,49 +2950,22 @@ Inheritance = SongCreatorIcon
 Inheritance = SongFixerIcon
 
 [SongSlideStatic1]
-X = 195
-Y = 280
-W = 395
-H = 270
-Z = 0.95
-Alpha = 0.75
-Color = ColorLight
-Tex = SongSelection2
-Type = Colorized
+Inheritance = SongRouletteStatic1
 
 [SongSlideTextArtist]
+Inheritance = SongRouletteTextArtist
 X = 400
-Y = 290
-W = 370
-Color = White
-Font = 1
-Size = 20
-Align = 1
 
 [SongSlideTextTitle]
+Inheritance = SongRouletteTextTitle
 X = 400
-Y = 340
-W = 370
-Color = White
-Font = 0
-Size = 18
-Align = 1
 
 [SongSlideTextNumber]
-X = 580
-Y = 530
-Z = 0.95
-Color = White
-Size = 12
-Align = 2
+Inheritance = SongRouletteTextNumber
 
 [SongSlideTextYear]
+Inheritance = SongRouletteTextYear
 X = 400
-Y = 395
-Z = 0.95
-Color = White
-Size = 18
-Align = 1
 
 [SongSlideTextCreator]
 Inheritance = SongRouletteTextCreator
@@ -3388,16 +3383,12 @@ Z = 1
 Inheritance = SongDuetIcon
 X = 500
 Y = 112
-W = 22
-H = 24
 Z = 1
 
 [SongListRapIcon]
 Inheritance = SongRapIcon
 X = 470
 Y = 112
-W = 18
-H = 22
 Z = 1
 
 [SongListCreatorIcon]
@@ -3427,17 +3418,15 @@ Size = 18
 Align = 0
 
 [SongListTextNumber]
-Inheritance = SongSlideTextNumber
+Inheritance = SongRouletteTextNumber
 X = 30
 Y = 550
-Size = 15
 Align = 0
 
 [SongListTextYear]
-Inheritance = SongSlideTextYear
+Inheritance = SongRouletteTextYear
 X = 527
 Y = 72
-Size = 18
 Align = 2
 
 [SongListTextCreator]
@@ -3931,18 +3920,14 @@ Color = White
 Size = 20
 
 [SongMosaicTextNumber]
-Inheritance = SongSlideTextNumber
+Inheritance = SongRouletteTextNumber
 X = 565
 Y = 555
-Size = 14
-Align = 2
 
 [SongMosaicTextYear]
-Inheritance = SongSlideTextYear
+Inheritance = SongRouletteTextYear
 X = 565
 Y = 343
-Z = 1
-Size = 16
 Align = 2
 
 [SongMosaicTextCreator]
